[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/power_ups/sponge_power_up.png" type="Texture" id=1]
[ext_resource path="res://scripts/power_ups.gd" type="Script" id=2]
[ext_resource path="res://assets/power_ups/first_aid_power_up.png" type="Texture" id=3]

[node name="power_ups" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="FirstAid" type="Button" parent="."]
margin_left = 400.0
margin_top = 560.0
margin_right = 1628.0
margin_bottom = 1782.0
rect_scale = Vector2( 0.13, 0.13 )
icon = ExtResource( 1 )

[node name="Sponge" type="Button" parent="."]
margin_top = 560.0
margin_right = 1228.0
margin_bottom = 1782.0
rect_scale = Vector2( 0.13, 0.13 )
icon = ExtResource( 3 )

[connection signal="pressed" from="FirstAid" to="." method="_on_FirstAid_pressed"]
[connection signal="pressed" from="Sponge" to="." method="_on_Sponge_pressed"]
